portfolio update, fixed path links, updated css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <title>About | ChaA'llisa Taylor</title>
         <!--<link rel="stylesheet" type="text/css" href="assets\css\style.css">-->
-        <link rel="stylesheet" type="text/css" href="C:\Users\taylo\Desktop\Code\Responsive-Portfolio\assets\css\style.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
 
     <body>
@@ -25,7 +25,7 @@
             <section class="main-section">
                 <h1 class="page">About Me</h1>
                 
-                <img class="small" src="C:\Users\taylo\Desktop\Code\Basic-Portfolio\assets\images\Funny_Quotes_about_Life_happy-bunny.jpg" alt="me_image">
+                <img class="small" src="assets/images/1411045273-amazing-quotes-to-inspire-you-albert-einstein.jpg" alt="me_image">
                 <p>
                     This a paragraph about me.
                 </p>
