--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Contact | ChaA'llisa Taylor</title>
-        <link rel="stylesheet" type="text/css" href="assets\css\style.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
 
     <body>
