added picture of project, fixed format for docs

--- a/index.html
+++ b/index.html
@@ -1,48 +1,50 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-    <head>
-        <meta charset="UTF-8">
-        <title>About | ChaA'llisa Taylor</title>
-        <!--<link rel="stylesheet" type="text/css" href="assets\css\style.css">-->
-        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <title>About | ChaA'llisa Taylor</title>
+    <!--<link rel="stylesheet" type="text/css" href="assets\css\style.css">-->
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
 
-    <body>
+<body>
 
-        <header id="master">
-            <div class="container">
-                <a href="index.html" id="logo">ChaA'llisa Taylor</a>
-                <nav>
-                    <a href="index.html">About</a>
-                    <a href="portfolio.html">portfolio</a>
-                    <a href="contact.html">Contact</a>
-                </nav>
-            </div>
-        </header>
-
-        <div id="main-container" class="container">
-            <section class="main-section">
-                <h1 class="page">About Me</h1>
-                
-                <img class="small" src="assets/images/1411045273-amazing-quotes-to-inspire-you-albert-einstein.jpg" alt="me_image">
-                <p>
-                    This a paragraph about me.
-                </p>
-                <p>
-                    Here is an extra paragraph.
-                </p>
-                <p>
-                    This one is a backup. Just in case.
-                </p>
-            </section>
+    <header id="master">
+        <div class="container">
+            <a href="index.html" id="logo">ChaA'llisa Taylor</a>
+            <nav>
+                <a href="index.html">About</a>
+                <a href="portfolio.html">portfolio</a>
+                <a href="contact.html">Contact</a>
+            </nav>
         </div>
-        
-        <footer>
-            <div class="container">
-                Copyright &copy;
-            </div>
-        </footer>
+    </header>
 
-    </body>
+    <div id="main-container" class="container">
+        <section class="main-section">
+            <h1 class="page">About Me</h1>
+
+            <img class="small" src="assets/images/1411045273-amazing-quotes-to-inspire-you-albert-einstein.jpg"
+                alt="me_image">
+            <p>
+                This a paragraph about me.
+            </p>
+            <p>
+                Here is an extra paragraph.
+            </p>
+            <p>
+                This one is a backup. Just in case.
+            </p>
+        </section>
+    </div>
+
+    <footer>
+        <div class="container">
+            Copyright &copy;
+        </div>
+    </footer>
+
+</body>
+
 </html>
