updated images and added more content

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
             <img class="small" src="assets/images/1411045273-amazing-quotes-to-inspire-you-albert-einstein.jpg"
                 alt="me_image">
             <p>
-                This a paragraph about me.
+                My name is ChaA'llisa Taylor. I have been designing websites through other sites such as Wordpress, GoDaddy, and Wix since I was in high school. I have now decided to take my skills to the next level.
             </p>
             <p>
-                Here is an extra paragraph.
+                
             </p>
             <p>
-                This one is a backup. Just in case.
+                On the Portfolio page, you will see a few of my completed sites. My GitHub page will have much more of the work I have completed and some I am still working on. Click <a href="https://github.com/chaallisat">here</a> to go to my GitHub page to see for yourself. 
             </p>
         </section>
     </div>
