--- a/portfolio.html
+++ b/portfolio.html
@@ -25,24 +25,24 @@
             <h1>Portfolio</h1>
 
             <div class="work">
-                <img src="assets/images/WP_20150728_19_30_14_Pro (2).jpg" alt="Word Guess">
+                <img src="assets/images/picinic.jpg" alt="Local Picnic App">
 
-                <h3>Word Guess</h3>
+                <a href="https://chaallisat.github.io/Project-One/"><h3>Local Picnic App</h3></a>
             </div>
             <div class="work">
                 <img src="assets/images/Screenshot (1).png" alt="Crystal Game">
 
-                <h3>Crystal Game</h3>
+                <a href="https://chaallisat.github.io/unit-4-game/"><h3>Crystal Game</h3></a>
             </div>
             <div class="work">
-                <img src="assets/images/WP_20150728_19_30_14_Pro (2).jpg" alt="Trivia Game">
+                <img src="assets/images/giffy.jpg" alt="Cartoon Gifs">
 
-                <h3>Trivia Game</h3>
+                <a href="https://chaallisat.github.io/GifTastic/"><h3>Cartoon Gifs</h3></a>
             </div>
             <div class="work">
-                <img src="assets/images/WP_20150728_19_30_14_Pro (2).jpg" alt="Gif Tastic">
+                <img src="assets/images/timer.jpg" alt="Stop Watch">
 
-                <h3>Gif Tastic</h3>
+                <a href="https://chaallisat.github.io/Timer/"><h3>Stop Watch</h3></a>
             </div>
 
         </section>
